[package]
name = "config-more-formats"
version = "1.0.0"
edition = "2021"
authors = [
    "Christopher König <me@kurabloodlust.eu>"
]
documentation = "https://docs.rs/xconfig"
description = "Additional formats for the config library."
repository = "https://github.com/z0ne-dev/xconfig"
readme = "README.md"
keywords = ["config", "configuration", "config", "serde"]
license = "MIT"
categories = ["config"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[package.metadata.docs.rs]
all-features = true

[badges]
github = { repository = "z0ne-dev/xconfig" }
maintenance = { status = "passively-maintained" }
is-it-maintained-open-issues = { repository = "z0ne-dev/xconfig" }
is-it-maintained-issue-resolution = { repository = "z0ne-dev/xconfig" }

[dependencies]
ason = { version = "1.0.1", optional = true }
hcl-rs = { version = "0.18.0", optional = true }
serde-hjson = { version = "1.0.0", optional = true }
serde-java-properties = { version = "0.2.0", optional = true }
serde_yaml_ng = { version = "0.10.0", optional = true }
config = { version = "0.14.0", default-features = false }
serde = { version = "1", features = ["derive"] }

[features]
default = []
hjson = ["dep:serde-hjson"]
properties = ["dep:serde-java-properties"]
hcl = ["dep:hcl-rs"]
ason = ["dep:ason"]
yaml_ng = ["dep:serde_yaml_ng"]
ron = ["config/ron"]
json5 = ["config/json5"]
json = ["config/json"]
yaml = ["config/yaml"]
toml = ["config/toml"]
ini = ["config/ini"]
all = ["yaml_ng", "json5", "properties", "hjson", "ron", "hcl", "ason", "json", "toml", "ini"]
